--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ nav div div img{
 
  .welcome-hero {
     position: relative;
-    background:url(/assets/landing.jpg)no-repeat;
+    background:url(assets/landing.jpg)no-repeat;
     background-position:center;
     background-size:cover;
     text-align: center;
@@ -192,7 +192,7 @@ nav div div img{
 About section
 ______________________________________________________ */
 .aboutimg{
-    background-image: url(/assets/about.jpg);
+    background-image: url(assets/about.jpg);
     background-repeat: no-repeat;
     background-size: cover;
        
@@ -249,7 +249,7 @@ ______________________________________________________ */
 Audio section
 ---------------------------------------------------- */
 .audio-section{
-    background-image: url(/assets/tokyo.jpg);
+    background-image: url(assets/tokyo.jpg);
     padding-top: 200px;
     padding-bottom: 200px;
     align-items: center;
@@ -269,7 +269,7 @@ Background Story
     background-color: #1F8C15;
 }
 .history-image{
-    background-image: url(/assets/subway-surfers-tag-key-art.webp);
+    background-image: url(assets/subway-surfers-tag-key-art.webp);
 }
 .history-content{
     padding-top: 150px;
@@ -285,7 +285,7 @@ Background Story
 The Legacy
 ------------------------------------------------------------- */
 .legacy{
-    background-image: url(/assets/sanfrancisco.jpg);
+    background-image: url(assets/sanfrancisco.jpg);
     padding-top: 200px;
     padding-bottom: 200px;
     align-items: center; 
