--- a/css/howtoplay.css
+++ b/css/howtoplay.css
@@ -1,6 +1,6 @@
 body{
     background-attachment: fixed;
-    background-image: url(/assets/miami.jpg);
+    background-image: url(assets/miami.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     
